fix: :bug: fix Catalog title not centered on mobile, fix links from dropdown doesn't work, fix duplicate brands filter

--- a/src/pages/Catalog/index.module.css
+++ b/src/pages/Catalog/index.module.css
@@ -2,7 +2,6 @@
   @media screen and (min-width: $mantine-breakpoint-xs) {
     padding: 0 5.5% 0 5.5% !important;
     justify-content: center;
-    padding: 0;
   }
 }
 
